# amiitool

./: CMakeLists.txt  build-cross-mingw32.sh
include/: amiibo_lua.h
src/: amiibo.c  amiibo_lua.c  util.c
